Fixxed the problem with wrong rpm