@@ -2,7 +2,6 @@ package app;
 
 import app.enums.Direction;
 import app.enums.GearCreationState;
-import app.objects.Gear;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import processing.core.PApplet;
@@ -12,14 +11,13 @@ import processing.event.MouseEvent;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class GearSimulation extends PApplet {
     private static final Logger LOG = LoggerFactory.getLogger(GearSimulation.class);
-    private final boolean HIDDEN_MODE = false;
+    private final boolean HIDDEN_MODE = true;
     private final List<Gear> gears = new ArrayList<>();
 
-    private Gear gearInCreation = null;
+    private Gear gearInCreation;
 
     @Override
     public void settings() {
@@ -41,7 +39,7 @@ public class GearSimulation extends PApplet {
     public void mouseDragged(final MouseEvent mouseEvent) {
         if (mouseEvent.getButton() == LEFT && gearInCreation != null) {
             if (GearCreationState.SIZE.equals(gearInCreation.getGearCreationState())) {
-                gearInCreation.updateRadius(mouseEvent.getX(), mouseEvent.getY());
+                gearInCreation.updateSize(mouseEvent.getX(), mouseEvent.getY());
             } else {
                 gearInCreation.updateLocation(mouseEvent.getX(), mouseEvent.getY());
             }
@@ -50,10 +48,11 @@ public class GearSimulation extends PApplet {
 
     @Override
     public void mouseReleased(final MouseEvent mouseEvent) {
-        if (mouseEvent.getButton() == LEFT && gearInCreation != null) {
-            if (gearInCreation.getToothCount() >= 2 && GearCreationState.SIZE.equals(gearInCreation.getGearCreationState())) {
-                continueGearCreation();
-            }
+        if (mouseEvent.getButton() == LEFT &&
+                gearInCreation != null &&
+                gearInCreation.getToothCount() >= 3 &&
+                GearCreationState.SIZE.equals(gearInCreation.getGearCreationState())) {
+            continueGearCreation();
         }
     }
 
@@ -61,50 +60,78 @@ public class GearSimulation extends PApplet {
     public void mouseWheel(final MouseEvent mouseEvent) {
         if (gearInCreation != null) {
             switch (gearInCreation.getGearCreationState()) {
-                case TYPE -> gearInCreation.updateType();
-                case DIRECTION -> gearInCreation.updateDirection();
-                case SPEED -> gearInCreation.updateSpeed(mouseEvent.getCount());
+                case TYPE -> toggleType();
+                case DIRECTION -> toggleDirection();
+                case SPEED -> updateSpeed(mouseEvent.getCount());
+                default -> LOG.info("Scrolling won't effect state '{}'", gearInCreation.getGearCreationState());
             }
+        }
+    }
+
+    private void toggleType() {
+        gearInCreation.setMotor(!gearInCreation.isMotor());
+        if (gearInCreation.isMotor()) {
+            gearInCreation.setDirection(Direction.LEFT);
+            gearInCreation.setRpm(30);
+        } else {
+            gearInCreation.setDirection(null);
+            gearInCreation.setRpm(0);
+        }
+    }
+
+    private void toggleDirection() {
+        if (Direction.LEFT.equals(gearInCreation.getDirection())) {
+            gearInCreation.setDirection(Direction.RIGHT);
+        } else {
+            gearInCreation.setDirection(Direction.LEFT);
+        }
+    }
+
+    private void updateSpeed(final int speedChange) {
+        final float newRPM = gearInCreation.getRpm() + speedChange;
+        if (newRPM >= 1) {
+            gearInCreation.setRpm(newRPM);
         }
     }
 
     @Override
     public void mouseClicked(final MouseEvent mouseEvent) {
-        if (mouseEvent.getButton() == LEFT && gearInCreation != null) {
-            if (!GearCreationState.SIZE.equals(gearInCreation.getGearCreationState())) {
+        if (mouseEvent.getButton() == LEFT) {
+            if (gearInCreation != null && !GearCreationState.SIZE.equals(gearInCreation.getGearCreationState()))
                 continueGearCreation();
-            }
-        }
-        if (mouseEvent.getButton() == RIGHT && gearInCreation != null) {
-            gearInCreation = null; // TODO: check this
+        } else if (mouseEvent.getButton() == RIGHT) {
+            gearInCreation = null;
         }
     }
 
     @Override
     public void keyPressed(final KeyEvent keyEvent) {
-        LOG.debug("Pressed keycode {}", keyEvent.getKeyCode());
-        if (gearInCreation != null) {
-            switch (keyEvent.getKeyCode()) {
-                case BACKSPACE -> gearInCreation = null;
-                case ENTER, 32 -> continueGearCreation();
+        switch (keyEvent.getKeyCode()) {
+            case BACKSPACE -> gearInCreation = null;
+            case ENTER, 32 -> { // 32 = SPACEBAR
+                if (gearInCreation != null) {
+                    continueGearCreation();
+                }
             }
-        } else if (keyEvent.getKeyCode() == 116 || keyEvent.getKeyCode() == 82) { // Reload: F5 / R
-            updateGearList();
+            case 82, 116 -> updateGearList(); // Update on "R" and "F5"
+            default -> LOG.info("Button {} got no use.", keyEvent.getKeyCode());
         }
     }
 
     private void continueGearCreation() {
-        gearInCreation.setToNextStage();
-        if (GearCreationState.CREATED.equals(gearInCreation.getGearCreationState())) {
+        final GearCreationState nextStage = GearUtils.determineNextStage(gearInCreation);
+        gearInCreation.setGearCreationState(nextStage);
+        if (GearCreationState.CREATED.equals(nextStage)) {
             gears.add(gearInCreation);
             gearInCreation = null;
             updateGearList();
         }
     }
 
-    void updateGearList() {
+    private void updateGearList() {
         final List<Gear> motors = getMotors();
-        final List<Gear> updatedEntries = new ArrayList<>(motors); // antiLoopList
+        motors.forEach(motor -> motor.setRadiansOffset(0f)); // Set motor to initial position
+        final List<Gear> updatedEntries = new ArrayList<>(motors);
         motors.forEach(motor -> translateGearRotation(motor, updatedEntries));
     }
 
@@ -113,11 +140,13 @@ public class GearSimulation extends PApplet {
     }
 
     private void translateGearRotation(final Gear motor, final List<Gear> updatedEntries) {
-        final List<Gear> connectedGears = getConnectedGears(motor);
-        connectedGears.forEach(gear -> {
-            if (!gear.isMotor() && !updatedEntries.contains(gear)) {
+        getConnectedGears(motor).forEach(gear -> {
+            if (!updatedEntries.contains(gear)) {
+                // Updates the gear itself
                 applyTranslation(motor, gear);
                 updatedEntries.add(gear);
+
+                // Recursive translation
                 translateGearRotation(gear, updatedEntries);
             }
         });
@@ -126,18 +155,15 @@ public class GearSimulation extends PApplet {
     private List<Gear> getConnectedGears(final Gear motor) {
         return gears.stream()
                 .filter(gear -> !gear.isMotor())
-                .filter(gear -> Gear.isConnected(motor, gear))
-                .collect(Collectors.toList());
+                .filter(gear -> GearUtils.areConnected(motor, gear))
+                .toList();
     }
 
     private void applyTranslation(final Gear motor, final Gear gear) {
         final float translationRatio = (float) motor.getToothCount() / (float) gear.getToothCount();
         gear.setRpm(motor.getRpm() * translationRatio);
         gear.setDirection(Direction.LEFT.equals(motor.getDirection()) ? Direction.RIGHT : Direction.LEFT);
-
-        final float newOffset = motor.getRadiansOffset() * translationRatio;
-//        final float newOffset = motor.getRadiansOffset() * translationRatio - (TWO_PI / motor.getToothCount() / 2);
-        gear.setRadiansOffset(newOffset);
+        // TODO: Set init pos here?
     }
 
     @Override
@@ -145,32 +171,45 @@ public class GearSimulation extends PApplet {
         frameRate(MyConsts.FPS);
         gears.clear();
         addTestGears();
+        updateGearList();
     }
 
     private void addTestGears() {
         final Gear g1 = Gear.builder()
                 .gearCreationState(GearCreationState.CREATED)
-                .rpm(11)
+                .rpm(10)
                 .isMotor(true)
                 .direction(Direction.LEFT)
-                .positionX(80)
+                .positionX(100)
                 .positionY(100)
-                .radiansOffset(0)
-                .toothCount(10)
+                .radiansOffset(0f)
+                .initialRadiansOffset(0f)
                 .build();
-        g1.updateSize(100);
+        g1.updateSize(250, 250);
         gears.add(g1);
 
         final Gear g2 = Gear.builder()
                 .gearCreationState(GearCreationState.CREATED)
                 .isMotor(false)
-                .positionX(200)
-                .positionY(100)
-                .radiansOffset(0)
-                .toothCount(30)
+                .positionX(300)
+                .positionY(300)
+                .radiansOffset(1.5f)
+                .initialRadiansOffset(1.5f)
                 .build();
-        g2.updateSize(100);
+        g2.updateSize(340, 340);
         gears.add(g2);
+
+        final Gear g3 = Gear.builder()
+                .gearCreationState(GearCreationState.CREATED)
+                .isMotor(false)
+                .positionX(380)
+                .positionY(100)
+                .radiansOffset(1)
+                .initialRadiansOffset(1)
+                .radiansOffset(1)
+                .build();
+        g3.updateSize(440, 100);
+        gears.add(g3);
     }
 
     @Override
@@ -178,11 +217,13 @@ public class GearSimulation extends PApplet {
         background(50);
         fill(130);
         noStroke();
-        gears.forEach(this::drawGear);
 
-        if (gearInCreation != null) {
+        gears.forEach(this::drawGear);
+        if (gearInCreation != null && gearInCreation.getToothCount() > 0) {
             drawGear(gearInCreation);
         }
+
+        gears.forEach(this::updateGearRadians);
     }
 
     private void drawGear(final Gear gear) {
@@ -193,23 +234,54 @@ public class GearSimulation extends PApplet {
         if (!HIDDEN_MODE) {
             drawIntoInnerCircle(gear);
         }
-        drawRedDot(gear);
+        drawRadiansOffset(gear);
         popMatrix();
-
-        final float scaledRPM = (TWO_PI / MyConsts.FPS / 60) * gear.getRpm();
-        if (Direction.LEFT.equals(gear.getDirection())) {
-            gear.setRadiansOffset((gear.getRadiansOffset() + scaledRPM) % TWO_PI);
-        } else if (Direction.RIGHT.equals(gear.getDirection())) {
-            float newOffset = gear.getRadiansOffset() - scaledRPM;
-            if (newOffset < 0) {
-                gear.setRadiansOffset(TWO_PI - newOffset);
-            } else {
-                gear.setRadiansOffset(newOffset);
-            }
-        }
     }
 
-    private void drawRedDot(Gear gear) {
+    private void updateGearRadians(final Gear gear) {
+//        final float scaledRPM = TWO_PI / MyConsts.FPS / 60 * gear.getRpm();
+//        if (Direction.LEFT.equals(gear.getDirection())) {
+//            gear.setRadiansOffset((gear.getRadiansOffset() + scaledRPM) % TWO_PI);
+//        } else if (Direction.RIGHT.equals(gear.getDirection())) {
+//            float newOffset = gear.getRadiansOffset() - scaledRPM;
+//            if (newOffset < 0) {
+//                gear.setRadiansOffset(TWO_PI - newOffset);
+//            } else {
+//                gear.setRadiansOffset(newOffset);
+//            }
+//        }
+
+        // TODO: maybe undo what I do now
+        //  I think the % operation here adds some minimal offset change with each rotation...
+//// APPROACH 1 fail
+//        final float scaledRPM = (TWO_PI / MyConsts.FPS / 60) * gear.getRpm();
+//        if (Direction.LEFT.equals(gear.getDirection())) {
+//            final float newOffset = gear.getRadiansOffset() + scaledRPM;
+//            if (newOffset > TWO_PI) {
+//                gear.setRadiansOffset(gear.getInitialRadiansOffset());
+//            } else {
+//                gear.setRadiansOffset(newOffset);
+//            }
+//        } else if (Direction.RIGHT.equals(gear.getDirection())) {
+//            final float rad = gear.getRadiansOffset() - scaledRPM;
+//            if (abs(rad) > TWO_PI) {
+//                gear.setRadiansOffset(gear.getInitialRadiansOffset());
+//            } else {
+//                gear.setRadiansOffset(rad);
+//            }
+//        }
+
+// APPROACH 2
+        final float scaledRPM = TWO_PI / MyConsts.FPS / 60 * gear.getRpm();
+        if (Direction.LEFT.equals(gear.getDirection())) {
+            gear.setRadiansOffset(gear.getRadiansOffset() + scaledRPM);
+        } else if (Direction.RIGHT.equals(gear.getDirection())) {
+            gear.setRadiansOffset(gear.getRadiansOffset() - scaledRPM);
+        }
+
+    }
+
+    private void drawRadiansOffset(Gear gear) {
         stroke(255, 0, 0);
         strokeWeight(3L);
         final float rad = gear.getRadiansOffset();
@@ -243,7 +315,8 @@ public class GearSimulation extends PApplet {
     private void drawTeeth(final Gear gear, final PShape gearShape) {
         // Logic from https://math.stackexchange.com/questions/225351/equation-of-sine
         final float deltaSinDots = TWO_PI / (gear.getToothCount() * Gear.TOOTH_SIZE);
-        for (float rad = 0; rad <= TWO_PI; rad += deltaSinDots) {
+        final float completeCircle = TWO_PI + (10 * deltaSinDots); // 10 additional iterations due to graphic "bug"
+        for (float rad = 0; rad <= completeCircle; rad += deltaSinDots) {
             float xPos = (gear.getRadius() + Gear.TOOTH_SIZE * sin(gear.getToothCount() * (rad + gear.getRadiansOffset()))) * cos(rad);
             float yPos = (gear.getRadius() + Gear.TOOTH_SIZE * sin(gear.getToothCount() * (rad + gear.getRadiansOffset()))) * sin(rad);
             gearShape.vertex(xPos, yPos);
